<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="8dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_dialog_title"
        android:text="@string/dialog_distance_title"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/bt_3km"
        style="@style/ButtonStyle"
        android:onClick="onDialogClick"
        android:text="@string/kilometre_3" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@drawable/h_dotted_line" />

    <Button
        android:id="@+id/bt_5km"
        style="@style/ButtonStyle"
        android:onClick="onDialogClick"
        android:text="@string/kilometre_5" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@drawable/h_dotted_line" />

    <Button
        android:id="@+id/bt_8km"
        style="@style/ButtonStyle"
        android:onClick="onDialogClick"
        android:text="@string/kilometre_8" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@drawable/h_dotted_line" />

    <Button
        android:id="@+id/bt_10km"
        style="@style/ButtonStyle"
        android:onClick="onDialogClick"
        android:text="@string/kilometre_10" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@drawable/h_dotted_line" />

</LinearLayout>